releases/0.2.1/Synapse-local-test-guide.md
# Synapse 0.2.1 — iMessage 읽기·텍스트 전송 로컬 알파

Apple Silicon(M1 이상)용입니다. macOS 13 이상을 빌드 대상으로 설정했으며 검증 환경은 macOS 26.6.2, Swift 6.3.3입니다. 다른 OS 버전은 실기기 검증 전입니다.

## 설치와 연결

1. `Synapse-0.2.1-arm64.dmg`를 열고 **Synapse**를 **Applications(응용 프로그램)** 폴더로 드래그합니다. 기존 앱이 실행 중이면 먼저 종료하세요.
2. Synapse를 실행합니다. 처음에는 합성 샘플 대화가 표시됩니다.
3. 샘플 대화를 선택하고 아래 작성창에서 텍스트를 쓴 뒤 **샘플 전송**을 누르면 작성 흐름을 테스트할 수 있습니다. 실제 전송은 없습니다.
4. **iMessage 연결**을 누릅니다. 접근 안내가 나오면 시스템 설정 → 개인정보 보호 및 보안 → 전체 디스크 접근 권한에서 `Synapse.app`을 추가하고 켭니다.
5. 앱을 완전히 종료한 다음 다시 실행하고 **iMessage 연결**을 누릅니다.

개인 테스트용 ad-hoc 서명이며 Apple Developer ID 서명·공증은 없습니다. macOS가 실행을 차단하면 개인정보 보호 및 보안에서 해당 앱의 ‘확인 없이 열기’ 항목을 확인하세요. 시스템 전체 보안 기능을 끌 필요는 없습니다. 앱 교체 시 접근 권한을 다시 설정해야 할 수 있습니다.

## 작성과 전송

1. 기존 **iMessage 대화**를 선택합니다. 작성창 위의 대화 이름과 ID를 확인합니다.
2. 텍스트를 작성합니다. **Enter**는 줄바꿈, **⌘Enter** 또는 **전송** 버튼은 전송입니다. UTF-8 16,384바이트까지 입력을 전송할 수 있습니다.
3. 첫 전송 시 Synapse가 메시지 앱을 제어하도록 macOS 자동화 권한을 허용합니다. 거부했다면 작성창의 **자동화 설정 열기**에서 Synapse → 메시지 접근을 허용한 뒤 직접 다시 전송합니다.
4. ‘메시지 앱에 전송을 요청했습니다’는 메시지 앱이 명령을 처리했다는 뜻이며 상대방 수신 보장은 아닙니다. 실제 배달 상태는 Apple 메시지 앱에서 확인하세요.

전송 중 추가 전송·연결 전환은 차단합니다. 실패하면 초안을 유지합니다. **전송 결과 불명**이면 메시지 앱에서 실제 전송 여부를 확인하고, 작성창의 확인 버튼으로 잠금을 푼 뒤 필요한 경우에만 수동 전송하세요. 자동 재시도는 없습니다.

대화별 초안은 메모리에만 남으며 **연결 해제·앱 종료 시 지워집니다**. 재실행 후 다시 연결해야 하며 이전 전송을 자동 재개하지 않습니다. 샘플과 **DB 선택**으로 연 파일에서는 실제 발신하지 않습니다. 기존 iMessage 대화에서만 보낼 수 있습니다.

## 지원 범위

- 최근 최대 2,000개 메시지 열람, 대화/본문 검색, 5초 자동 갱신, 수동 갱신(⌘R)
- 일반 텍스트·일부 표준 attributedBody 본문, 한국어·이모지
- 기존 iMessage 1:1·그룹 대화의 텍스트 작성·전송 경로
- 대화별 메모리 초안, 중복 클릭 차단, 권한 거부·대상 불일치·결과 불명 표시
- 원본 chat.db는 읽기 전용으로 접근. 전송은 Apple 메시지 앱 명령으로 수행

새 대화 시작, SMS/RCS 발신, 첨부·리액션 전송, 메시지 수정·삭제, 연락처 이름 변환, 영속 outbox와 배달 확인은 미지원입니다. SMS/RCS 수신 표시는 Apple 메시지 앱의 동기화·iPhone 전달 설정에 따릅니다. 일부 본문 형식과 원본 편집·삭제는 완전히 반영되지 않을 수 있습니다.

## 검증 결과와 남은 실기기 확인

- 읽기 계층 **29개 검사**, 전송 계층 **46개 검사** 통과. 잘린/임의 바이너리 입력 검증 포함.
- 정확한 Apple event 문자열 인수 전달, AppleScript 컴파일, 합성 전송 성공·권한 거부·대상 불일치, helper 비정상 응답·종료·타임아웃 검증.
- 샘플 발신 격리, 가져온 DB 전송 차단, 중복 클릭, 전송 도중 대화 전환, 초안 보존·정리 검증.
- 실제 macOS 앱에서 한국어·이모지·줄바꿈 작성, 대화 전환 시 초안 복원, ⌘Enter 샘플 전송·초안 초기화 및 화면 배치를 확인했습니다.
- 실제 계정에 메시지를 보내는 자동 테스트는 수행하지 않습니다.
- 미검증: 실제 계정 전송/배달, 실제 전체 디스크 접근 및 자동화 권한 승인·거부·철회, DMG에서 Applications로 설치, 다른 macOS 버전.

## 소스와 재빌드

`Synapse-0.2.1-source.zip`을 풀고 프로젝트 루트에서 실행합니다.

```sh
bash native/scripts/test.sh
bash native/scripts/build.sh
bash native/scripts/package.sh
```

앱과 DMG는 `native/build/`에 생성됩니다. 원본 프로젝트 경로는 `/Users/pete/Desktop/playground/2026-synapse`입니다.

## 0.2.1 수정

현대 macOS가 iMessage 대화 ID를 `any;…`로 저장할 때 작성창이 숨겨지던 오류를 수정했습니다. 대화의 `service_name`을 함께 읽어 iMessage 여부를 판별하고 화면에도 실제 서비스 이름을 표시합니다. 실제 로컬 DB를 읽은 모델 검사에서 iMessage 작성 가능 여부와 SMS/RCS 발신 차단을 확인했습니다. 이 확인은 실제 전송을 수행하지 않습니다.
